--- a/login/core/templates/static/css/styles.css
+++ b/login/core/templates/static/css/styles.css
@@ -110,6 +110,9 @@ label {
     margin-bottom: 5px;
 }
 
+.manage-form{
+    align-items: center;
+}
 input,select{
     width: 60% !important;
     display: inline !important;
@@ -120,7 +123,10 @@ input,select{
     color: #000000;
     box-sizing: border-box; /* Asegura que el padding no afecte el ancho total */
 }
-
+.form-group {
+    margin-bottom: 1rem;
+    text-align: justify;
+}
 .form-group input,
 .form-group select {
     width: 100%;
@@ -398,7 +404,7 @@ h2 {
 }
 
 .form-actions {
-    display: flex; /* Utiliza flexbox para alinear los botones */
+    display: block; /* Utiliza flexbox para alinear los botones */
     flex-direction: column; /* Alinea los botones en una columna */
     gap: 1rem; /* Espaciado entre los botones */
 }
