--- a/login/core/templates/core/manage_points.html
+++ b/login/core/templates/core/manage_points.html
@@ -1,34 +1,27 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
+<div class="container-fluid">
 <h3>Gestionar Puntos de Usuario</h3>
-<form method="post">
+<form method="post" class="manage-form">
     {% csrf_token %}
-    <div class="form-group">
         <label for="user">Usuario:</label>
         <select name="user" id="user" class="form-control-puntos">
             {% for user in users %}
                 <option value="{{ user.id }}">{{ user.username }}</option>
             {% endfor %}
         </select>
-    </div>
-    <div class="form-group">
         <label for="puntos_pokemon">Puntos Pokémon:</label>
         <input type="number" name="puntos_pokemon" id="puntos_pokemon" class="form-control-puntos" value="0">
-    </div>
-    <div class="form-group">
         <label for="puntos_yugioh">Puntos Yu-Gi-Oh!:</label>
         <input type="number" name="puntos_yugioh" id="puntos_yugioh" class="form-control-puntos" value="0">
-    </div>
-    <div class="form-group">
         <label for="puntos_magic">Puntos Magic:</label>
         <input type="number" name="puntos_magic" id="puntos_magic" class="form-control-puntos" value="0">
-    </div>
-    <div class="form-group">
         <label for="concepto">Concepto:</label>
         <input type="text" name="concepto" id="concepto" class="form-control-puntos">
-    </div>
+        <br><br>
     <button type="submit" class="btn btn-primary">Actualizar Puntos</button>
 </form>
 <a href="{% url 'movimientos_list' %}">Lista de movimientos</a><br>
+</div>
 {% endblock %}
