--- a/login/core/templates/core/movimientos_list.html
+++ b/login/core/templates/core/movimientos_list.html
@@ -1,6 +1,7 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
+<div class="container-fluid">
 <h3>Lista de Movimientos</h3>
 <table class="table" border="1">
     <thead>
@@ -27,4 +28,5 @@
     </tbody>
 </table>
 <a href="{% url 'manage_points' %}">Regresar</a><br>
+</div>
 {% endblock %}
