pase de batalla heroclix

--- a/login/core/templates/core/home.html
+++ b/login/core/templates/core/home.html
@@ -22,6 +22,8 @@
                     Puntos pase Yu-Gi-Oh: {{ puntos_pase_yugioh }}
                     <br>
                     Puntos pase Magic: {{ puntos_pase_magic }}
+                    <br>
+                    Puntos pase Heroclix: {{puntos_pase_heroclix}}
 
                 {% else %}
                     Bienvenido, visitante
