--- a/login/core/templates/core/informacion.html
+++ b/login/core/templates/core/informacion.html
@@ -21,6 +21,7 @@
                             <th>Entrada</th>
                             <th>Premio</th>
                             <th>Posición</th>
+                            <th>Juego</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -30,6 +31,7 @@
                                 <td>{{ torneo.entrada }}</td>
                                 <td>{{ torneo.premio }}</td>
                                 <td>{{ torneo.posicion }}</td>
+                                <td>{{torneo.juego}}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
