--- a/login/core/templates/core/pase_batalla.html
+++ b/login/core/templates/core/pase_batalla.html
@@ -103,6 +103,39 @@
             </table>
         </div>
         {% endif %}
+        {% if puntos_pase_heroclix > 0 %}
+        <!-- Tabla para el Pase de Batalla Heroclix -->
+        <h4>Pase de Batalla Heroclix</h4>
+        <p>Puntos: {{ puntos_pase_heroclix }}</p>
+        <div class="table-responsive">
+            <table class="table table-bordered table-hover battle-pass-table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Nivel (Puntos)</th>
+                        {% for i, next_i in puntos_rango %}
+                            <th {% if puntos_pase_heroclix >= i and puntos_pase_heroclix < next_i %} class="highlight" {% endif %}>
+                                {{ i }}
+                            </th>
+                        {% endfor %}
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="premio">Premio (Pase Normal Heroclix)</td>
+                        {% for premio in premios_normales_heroclix %}
+                            <td>{{ premio }}</td>
+                        {% endfor %}
+                    </tr>
+                    <tr>
+                        <td class="premio">Premio (Pase Premium Heroclix)</td>
+                        {% for premio in premios_premium_heroclix %}
+                            <td>{{ premio }}</td>
+                        {% endfor %}
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
