--- a/login/core/templates/core/manage_points.html
+++ b/login/core/templates/core/manage_points.html
@@ -17,8 +17,10 @@
         <input type="number" name="puntos_yugioh" id="puntos_yugioh" class="form-control-puntos" value="0">
         <label for="puntos_magic">Puntos Magic:</label>
         <input type="number" name="puntos_magic" id="puntos_magic" class="form-control-puntos" value="0">
+        <label for="puntos_heroclix">Puntos Heroclix:</label>
+        <input type="number" id="puntos_heroclix" name="puntos_heroclix" class="form-control-puntos" value="0" />
         <label for="concepto">Concepto:</label>
-        <input type="text" name="concepto" id="concepto" class="form-control-puntos">
+        <input type="text" name="concepto" id="concepto">
         <br><br>
     <button type="submit" class="btn btn-primary">Actualizar Puntos</button>
 </form>
