lambda y comisión y cambios importantes

--- a/login/core/templates/core/manage_points.html
+++ b/login/core/templates/core/manage_points.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container-fluid">
-<h3>Gestionar Puntos de Usuario</h3>
+<h3>Gestionar Puntos de Batalla</h3>
 <form method="post" class="manage-form">
     {% csrf_token %}
         <label for="user">Usuario:</label>
