--- a/login/core/templates/static/css/styles.css
+++ b/login/core/templates/static/css/styles.css
@@ -155,7 +155,10 @@ table {
     margin: 0 auto; /* Alinea la tabla al centro */
     margin-bottom: 30px;
 }
-
+.table-bordered{
+   width: 115%; 
+   margin-left: -60px;
+}
 .intercambios-page table,
 .ventas-page table{
     width: 100%; /* La tabla ocupará todo el ancho del contenedor */
