cambios en el sitio

--- a/login/core/templates/core/create_user.html
+++ b/login/core/templates/core/create_user.html
@@ -11,6 +11,7 @@
         </div>
         <div class="form-actions">
             <button type="submit" class="btn btn-primary">Crear</button>
+            <a href="{% url 'users_list' %}" class="btn btn-link">Volver a lista de usuarios</a>
             <a href="{% url 'dashboard' %}" class="btn btn-secondary">Volver al Dashboard</a>
         </div>
     </form>
