--- a/login/core/templates/core/manage_points.html
+++ b/login/core/templates/core/manage_points.html
@@ -5,12 +5,9 @@
 <h3>Gestionar Puntos de Batalla</h3>
 <form method="post" class="manage-form">
     {% csrf_token %}
-        <label for="user">Usuario:</label>
-        <select name="user" id="user" class="form-control-puntos">
-            {% for user in users %}
-                <option value="{{ user.id }}">{{ user.username }}</option>
-            {% endfor %}
-        </select>
+    
+        <label for="codigo_usuario">Código del Usuario:</label>
+        <input type="text" name="codigo_usuario" id="codigo_usuario" class="form-control-puntos" placeholder="Ingrese el código del usuario">
         <label for="puntos_pokemon">Puntos Pokémon:</label>
         <input type="number" name="puntos_pokemon" id="puntos_pokemon" class="form-control-puntos" value="0">
         <label for="puntos_yugioh">Puntos Yu-Gi-Oh!:</label>
@@ -24,6 +21,7 @@
         <br><br>
     <button type="submit" class="btn btn-primary">Actualizar Puntos</button>
 </form>
-<a href="{% url 'movimientos_list' %}">Lista de movimientos</a><br>
+<a href="{% url 'users_list' %}" class="btn btn-secondary">Volver a lista de usuarios</a>
+<a href="{% url 'movimientos_list' %}" class="btn btn-link">Lista de movimientos</a><br>
 </div>
 {% endblock %}
